--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
         });
     </script>
 
+
 </head>
 <body>
 <div id="captchaImageArea"></div>
 <input type="text" id="userInput">
-<input type="button" value="New Image" id="newBtn"><input type="button" value="Check" id="checkBtn"><br>
+
+<input type="button" value="New Image" id="newBtn">
+
+<input type="button" value="Check" id="checkBtn"><br>
 <p id="info">Type the number you see above.</p>
 </body>
 </html>
