renamed data variable to result

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <!-- JS CUSTOM -->
     <script>
         //CREATE CAPTCHA CALLBACK FUNCTION
-        function createCaptchaCallbackFunction(data){
+        function createCaptchaCallbackFunction(result){ //result = true if captcha created successfully
 
             //DO SOME AWESOME STUFF HERE LIKE GENERATING A CSRF TOKEN.. csrfGeneratorChecker available here: https://github.com/nialloc9/csrfProtection
 
-            //data booleon check
-            if(data){
+            //result booleon check
+            if(result){
                 $('#info').text('Type the number you see above.');
             }
         }
 
 
         //CHECK CAPTCHA CALLBACK FUNCTION
-        function checkCaptchaCallbackFunction(data){ //data = true if user input is correct
+        function checkCaptchaCallbackFunction(result){ //result = true if user input is correct
             //DO SOME AWESOME STUFF HERE LIKE CHECKING ALL INPUTS ARE FILLED IN... inputChecker available here: https://github.com/nialloc9/inputChecker
 
-            //data booleon check
-            if(data){
+            //result booleon check
+            if(result){
                 $('#info').text('Its a match!..');
             }else{
                 $('#info').text('Please write the correct number.');
